[tool.poetry]
name = "rdiffdb"
version = "0.1.0"
description = ""
authors = ["Josh Brooks <josh@catalpa.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fabric = "^3.0.1"
decorator = "^5.1.1"
docker = "^6.1.2"
mypy = "^1.3.0"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.linters.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
